5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1592_1806.log
== TEST (2019-05-16 22:47:00) 
-- CODE:
from math import*
n = int(input("numero de pessoas: "))
pn = (1 - (factorial(365)/factorial(365 - n)) * (1/(356**n))/100
print(pn)
-- ERROR:
File "XXXX", line 4
    print(pn)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 22:47:28) 
-- CODE:
from math import*
n = int(input("numero de pessoas: "))
pn = (1 - (factorial(365)/factorial(365 - n)) * (1/(356**n))/100
print(round(pn, 2))
-- ERROR:
File "XXXX", line 4
    print(round(pn, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 22:47:56) 
-- CODE:
from math import*
n = int(input("numero de pessoas: "))
pn = (1 - (factorial(365)/factorial(365 - n)) * (1/(356**n)))/100
print(round(pn, 2))
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 22:49:54) 
-- CODE:
from math import*
n = int(input("numero de pessoas: "))
pn = (1 - (factorial(365)/factorial(365 - n)) * (1/(365**n)))/100
print(round(pn, 2))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 22:51:14) 
-- CODE:
from math import*
n = int(input("numero de pessoas: "))
pn = 1 - (factorial(365)/factorial(365 - n)) * (1/(365**n))
print(round(pn, 2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 22:53:22) 
-- CODE:
from math import*
n = int(input("numero de pessoas: "))
pn = 1 - (factorial(365)/factorial(365 - n)) * (1/(365**n))
print(round(pn, 8
-- ERROR:
File "XXXX", line 5
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 22:53:34) 
-- CODE:
from math import*
n = int(input("numero de pessoas: "))
pn = 1 - (factorial(365)/factorial(365 - n)) * (1/(365**n))
print(round(pn, 8))
-- OUTPUT:
0.16702479
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 22:54:24) 
-- CODE:
from math import*
n = int(input("numero de pessoas: "))
pn = 1 - (factorial(365)/factorial(365 - n)) * (1/(365**n))
p = pn * 100
print(round(p, 2))

-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 22:54:24) 
-- CODE:
from math import*
n = int(input("numero de pessoas: "))
pn = 1 - (factorial(365)/factorial(365 - n)) * (1/(365**n))
p = pn * 100
print(round(p, 2))

-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 22:54:35) 
-- CODE:
from math import*
n = int(input("numero de pessoas: "))
pn = 1 - (factorial(365)/factorial(365 - n)) * (1/(365**n))
p = pn * 100
print(round(p, 2))

-- EXECUTION TIME:
0.217241
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
